<resources>
    <string name="app_name">GatherIn</string>
    <string name="note">Notes</string>
    <string name="ok">OK</string>
    <string name="need_permissions">You should allow the app to use these permissions to work well</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="didYouForgetPwd">Did you forget your password?</string>
    <string name="createNewSection">Create new section</string>
    <string name="continueRegister">Continue</string>
    <string name="newAccount">New account</string>
    <string name="enterCode">Enter the confirmation code sent to your email</string>
    <string name="chooseAccountType">To create new account or login choose account type</string>
    <string name="user">User</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="username">Name</string>
    <string name="enterCode1">Enter 6 characters code</string>
    <string name="register">Register</string>
    <string name="newSectionName">New section name</string>
    <string name="createPrivateCode">Create private code</string>
    <string name="leader">Leader</string>
    <string name="leader2">(Leader)</string>
    <string name="login_as_type">Login (%s)</string>
    <string name="sendNotification">Send notification</string>
    <string name="groupResults">Group results</string>
    <string name="listOfRequests">List of sections</string>
    <string name="SectionsTops">( 3 sections tops )</string>
    <string name="upgrade">Upgrade</string>
    <string name="joinToSection">Join to section</string>
    <string name="confirm">Confirm</string>
    <string name="subscriptionsList">Subscriptions list</string>
    <string name="assure">Assure</string>
    <string name="sectionSymbol">Section symbol</string>
    <string name="copy">Copy</string>
    <string name="contact">Contact</string>
    <string name="manager">Manager</string>
    <string name="listOfGroups">List of groups</string>
    <string name="editSection">Edit section</string>
    <string name="sectionName">Section name</string>
    <string name="privateCode">Private code</string>
    <string name="membersList">Students list</string>
    <string name="sendAnswerToMasterEnabled">Send answer to the Teacher</string>
    <string name="sendAnswerToMasterDisabled">Answer was sent to the Teacher</string>
    <string name="noMessagesYet">No messages yet</string>
    <string name="writeMsg">Write a message</string>
    <string name="writeAnswerHere">Write your answer here…</string>
    <string name="notification">Notifications</string>
    <string name="noNotificationsYet">No notifications yet</string>
    <string name="sectionDetails">Section details</string>
    <string name="sendQuestionsToGroups">Send questions to groups</string>
    <string name="results">Results</string>
    <string name="sendAnswer">Send answer</string>
    <string name="chooseGroups">Choose groups</string>
    <string name="chooseAll">Choose all</string>
    <string name="essayQuestion">Essay question</string>
    <string name="writeAQuestionOrSendALink">Write a question or send a link</string>
    <string name="mcqQuestion">Voting question</string>
    <string name="fourChoicesTops">4 Choices at most</string>
    <string name="enterChoice">Enter choice</string>
    <string name="addChoice">Add choice</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="editProfile">Edit profile</string>
    <string name="aboutUs">About us</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="notificationAndReport">Notification and report</string>
    <string name="AddNotesByMsg">You can add notes by messages</string>
    <string name="writeYouNotesHere">Write you notes were</string>
    <string name="createNewGroup">Create new group</string>
    <string name="groupName">Group name</string>
    <string name="addMemberToGroup">Add new student to group</string>
    <string name="chooseGroupCaptain">Choose group captain</string>
    <string name="choose">Choose</string>
    <string name="choosed">Choosed</string>
    <string name="phoneNumber">Phone number</string>
    <string name="chooseLeader">Choose leader</string>
    <string name="editPassword">Edit password</string>
    <string name="myGroup">My group</string>
    <string name="leaderChats">Leader chats</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="numberOfSections">Number of allowed sections:</string>
    <string name="numberOfGroups">Number of allowed groups:</string>
    <string name="choosePlaneFirst">Please choose Package first</string>
    <string name="createNewAccount">Create new account</string>
    <string name="pleaseChooseAtLeastOneGroup">Please choose at least one group</string>
    <string name="alreadyHaveAnAccount">Already have an account, Login</string>
    <string name="chefName">Chef name:</string>
    <string name="copied">Copied</string>
    <string name="pleaseFillAllTheAnswers">Please fill all the answers</string>
    <string name="wrongCode">Wrong code</string>
    <string name="updateGroup">Update group</string>
    <string name="noAnswer">No answer</string>
    <string name="thereIsAnAnswer">There is an answer</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_bottom_nav" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_messages">Messages</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom" translatable="false">MainActivity</string>
    <string name="title_profile">Profile</string>
    <string name="splash_label_rights">&#169; All rights reserved to <b><i>gather in app.com</i></b></string>
    <string name="send_code_time_label">Time to send verification code</string>
    <string name="timer_value" translatable="false">%d:%d</string>
    <string name="current_pwd">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="about_app_title">About app</string>
    <string name="about_app" translatable="false">Information about app. Information about app. Information about app .Information about app .Information about app.Information about app .Information about app .Information about app. Information about app</string>
    <string name="validate_empty_field">Empty field not allowed!</string>
    <string name="validate_input_field_length_3">Input at least 3 characters!</string>
    <string name="validate_input_field_length_6">Input at least 6 characters!</string>
    <string name="validate_input_field_length_6_exact">(Exactly 6 characters)</string>
    <string name="validate_email_invalid_field">You should enter valid Email address!</string>
    <string name="password_not_identical_error_msg">Your passwords are not identical!</string>
    <string name="validation_failed">Please check all fields!</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="verification_code_error">Error verification code!</string>
    <string name="verification_code_max_tries_reached">You have reached to the maximum number of tries!</string>
    <string name="please_wait_label">Please wait</string>
    <string name="log_in_success">You have logged in successfully</string>
    <string name="log_in_fail">User name/password are not correct!</string>
    <string name="sign_up_success">You have been successfully registered in our system.</string>
    <string name="sign_up_fail">App was not able to register you!</string>
    <string name="email_already_registered">Email already registered!</string>
    <string name="connection_error">Check your internet connection!</string>
    <string name="network_error">Error has happened!</string>
    <string name="user_role_not_defined">User role not defined!</string>
    <string name="login_btn">Log in</string>
    <string name="forgot_password_btn">Forgot password?</string>
    <string name="continue_btn">Continue</string>
    <string name="verify_code_sent_success">Verification code was sent</string>
    <string name="resend_code_btn">Resend code</string>
    <string name="ok_btn">OK</string>
    <string name="enter_code_time_out">Time to enter the required code was out. Try to resend a new code</string>
    <string name="my_group_label">My group</string>
    <string name="lock_code">Lock code</string>
    <string name="next_btn">Next</string>
    <string name="enter_email_to_check_label">Enter your email to verify</string>
    <string name="confirm_btn">Confirm</string>
    <string name="create_section_success">You have successfully added a section.</string>
    <string name="create_group_success">You have successfully added a group.</string>
    <string name="cancel_btn">Cancel</string>
    <string name="log_out_confirm_msg_content">Are you sure you want to log out?</string>
    <string name="user_unauthorized">Unauthorized Access!</string>
    <string name="departments_rv_empty">No sections to show!</string>
    <string name="members_rv_empty">No students to show in this section!</string>
    <string name="group_members_rv_empty">No student to show in this group!</string>
    <string name="groups_results_rv_empty">No available group results!</string>
    <string name="create_section_code_already_exists">Section name or code already exists!</string>
    <string name="create_section_code_lamformed_exists">Section code is malformed!</string>
    <string name="create_group_already_exists">Group already exists!</string>
    <string name="section_group_size">%d group(s) / %d student(s) </string>
    <string name="department_deleted_successfully">Section was deleted successfully</string>
    <string name="group_deleted_successfully">Group was deleted successfully</string>
    <string name="update_section_success">You have successfully updated the section data</string>
    <string name="groups_num_placeholder">(%d group(s))</string>
    <string name="members_num_placeholder">(%d student(s))</string>
    <string name="group_members_placeholder">(%d student(s))</string>
    <string name="delete_section_confirm_dialog_msg">Are you sure you want to delete this section?</string>
    <string name="delete_group_confirm_dialog_msg">Are you sure you want to delete this group?</string>
    <string name="groups_rv_empty">No groups to show!</string>
    <string name="empty_group_answers">No answers</string>
    <string name="group_results_answers">There is an answer</string>
    <string name="tvNoGroupResults">No results yet!</string>
    <string name="create_section_error_max">You have reached the maximum limit of your account!</string>
    <string name="edit_group_title">Edit group</string>
    <string name="no_goup_leader_choosen">You have not selected a leader for this group!</string>
    <string name="select_group_leader_success">You have successfully set a leader</string>
    <string name="group_owner_label">Owner</string>
    <string name="leader_label">Leader</string>
    <string name="sendBtn">Send</string>
    <string name="retry">Retry</string>
    <string name="no_results">No results 😓</string>
    <string name="search_hint">Search members</string>
    <string name="ChatReportLabel">Report abuse</string>
    <string name="reportPersonOrGroup">Report a person or a group by writing down some details.</string>
    <string name="reportDetailsHint">Write your details here</string>
    <string name="reportNameHint">Enter the person or group name to report</string>
</resources>