<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Teacher.SendNotificationAndReportsFirstStep.View.SendNotificationAndReportsFirstStepActivity">

    <include layout="@layout/header_title_with_back"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ivSend"
        android:layout_below="@+id/rrFirst"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/relativeListOfSections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/ivReport"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/btn_reports" />

                <TextView
                    android:id="@+id/tvListOfRequests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/ivReport"
                    android:text="@string/chooseGroups"
                    android:textColor="@color/appColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relativeAllGroups"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@drawable/drawable_white_5_radius">

                <CheckBox
                    android:id="@+id/cbAllGroups"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/tvGroupName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/cbAllGroups"
                    android:text="@string/chooseAll"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16">

                <com.cooltechworks.views.shimmer.ShimmerRecyclerView
                    android:id="@+id/rvGroupsNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/rvEmptyView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_32"
                    android:layout_gravity="center"
                    android:text="@string/groups_rv_empty"
                    android:visibility="invisible"/>

            </FrameLayout>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/AddNotesByMsg"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@drawable/drawable_white_5_radius"
                android:gravity="top|start"
                android:hint="@string/writeYouNotesHere"
                android:maxLines="10"
                android:minLines="6"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/ivSend"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:text="@string/sendBtn"
                android:drawableEnd="@drawable/ic_send" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>